src/test/compile-fail/issue-3099-a.rs
enum a { b, c }

enum a { d, e } //~ ERROR Duplicate definition of type a

fn main() {}
